# public/api.yaml
@@ -1439,30 +1439,7 @@ paths:
                 type: array
                 items: 
                   type: string 
-  /reviews/approve/{reviews_id}:
-    get:
-      parameters:
-        - in: path
-          name: reviews_id   # Note the name is the same as in the path
-          required: true
-          schema:
-            type: string
-            minimum: 1
-          description: reviews_id
-      summary: List Reviews.
-      description: Optional extended description in CommonMark or HTML.
-      tags:
-      - Reviews
-      responses:
-        '200':    # status code
-          description: A JSON array of user names
-          content:
-            application/json:
-              schema: 
-                type: array
-                items: 
-                  type: string
-  /reviews/reject/{reviews_id}:
+  /reviews/approveAndreject/{status}/{reviews_id}:
     get:
       parameters:
         - in: path
@@ -1549,29 +1526,6 @@ paths:
   /reviews/top-rated-products:
     get:
       summary: List TopRate Reviews.
-      description: Optional extended description in CommonMark or HTML.
-      tags:
-      - Reviews
-      responses:
-        '200':    # status code
-          description: A JSON array of user names
-          content:
-            application/json:
-              schema: 
-                type: array
-                items: 
-                  type: string
-  /reviews/speuser/{user_id}:
-    get:
-      parameters:
-        - in: path
-          name: user_id   # Note the name is the same as in the path
-          required: true
-          schema:
-            type: string
-            minimum: 1
-          description: user_id
-      summary: List specific Reviews.
       description: Optional extended description in CommonMark or HTML.
       tags:
       - Reviews
